--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports: 
       - 3000:3000
   server:
-    build: ./server
+    build: ./
     ports:
       - 3001:3001
     environment:
