--- a/package.json
+++ b/package.json
@@ -7,16 +7,8 @@
     "start": "node app.js",
     "build": "cd client && npm run build"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Bl1xvan/mernportfolio.git"
-  },
-  "author": "",
+  "author": "Bl1xvan",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Bl1xvan/mernportfolio/issues"
-  },
-  "homepage": "https://github.com/Bl1xvan/mernportfolio#readme",
   "dependencies": {
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
@@ -25,9 +17,6 @@
     "mongoose": "^6.7.2",
     "morgan": "^1.10.0",
     "path": "^0.12.7"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.19"
   },
   "engines": {
     "node": "16.17.0"
