--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "build": "cd client && npm run build"
+    "server": "nodemon app.js",
+    "client": "npm start --prefix client",
+    "clientinstall": "npm install --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "render-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Bl1xvan",
   "license": "ISC",
@@ -19,6 +23,14 @@
     "nodemon": "^2.0.20",
     "path": "^0.12.7"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Bl1xvan/mernportfolio.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Bl1xvan/mernportfolio/issues"
+  },
+  "homepage": "https://github.com/Bl1xvan/mernportfolio#readme",
   "engines": {
     "node": "16.17.0"
   }
